<resources>
    <string name="app_name">UTSPraktik-IF5-10119194-FerdyMohamadFirdaus</string>
    <string name="jenis_tes">Jenis Tes</string>
    <string name="form1">Form Pengisian Data</string>
    <string name="form2">Cek Kembali Isian Data</string>
    <string name="tanggal">Tanggal Terkonfirmasi</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis">Jenis Kelamin</string>
    <string name="hub">Hubungan Dengan Anda</string>
    <string name="setuju">Dengan ini saya menyetujui bahwa data yang saya isikan adalah\nbenar</string>
    <string name="selanjut">Selanjutnya</string>
    <string name="cek">Cek Hasil Tes</string>
    <string name="ubah">Ubah</string>

</resources>